Some fixes to add movie button, fix minor category title positioning, add scroll to list overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,12 +6,13 @@
   cursor: pointer;
   font-size: 20px;
   padding-inline: 10px;
+  margin: 0px;
+}
+.selected {
+  font-size: 50px !important;
 }
 
 .category:hover {
   color: red;
-}
-
-.selected {
-  font-size: 50px;
+  font-size: 30px;
 }
